# live-bootcamp-project

./: .env.example  README.md  compose.local.yml  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: Cargo.toml  Dockerfile
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile  api_schema.yml
auth-service/.sqlx/: query-86ca727fe7e2c18a0cbb0b47ae2789e1da8e2f6f27f522a1972277a951102218.json
auth-service/assets/: app.js
auth-service/migrations/: 20240819172055_create_users_table.up.sql
auth-service/src/: lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: delete_account.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mailgun_email_client.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  my_sql_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  parsable.rs  tracing.rs
auth-service/tests/api/: delete_account.rs  helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
nginx-conf/: nginx.conf  nginx.local.conf
