[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.15.4"
