[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
axum-extra = {version = "0.12.5", features = ["cookie"]}
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "cookies", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = "0.20.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.43"
dotenv = "0.15"
lazy_static = "1.5.0"
rand = "0.8.5"
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "mysql", "migrate"]}
argon2 = {version = "0.5.3", features = ["std"]}
redis = {version = "1.0.3", features = ["tokio-comp"]}
tracing = "0.1.44"
tracing-subscriber = {version ="0.3.22", features = ["registry", "env-filter"]}
thiserror = "2.0.18"
color-eyre = "0.6.5"
tracing-error = "0.2.1"
secrecy = { version = "0.8.0", features = ["serde"] }

[dev-dependencies]
fake = "4.4.0"
wiremock = "0.6.5"